fix: remove unnecessary whitespace and improve image height styling

--- a/style.css
+++ b/style.css
@@ -220,7 +220,6 @@ h2 {
     align-items: center;
     padding: 10% 0%;
     height: 100%;
-
 }
 
 .product-image {
@@ -233,11 +232,10 @@ h2 {
 
 .product-image img {
     max-width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 16px;
     align-self: center;
     object-fit: cover;
-
 }
 
 
